Fix overflow-x

--- a/src/styles/core/body.scss
+++ b/src/styles/core/body.scss
@@ -1,8 +1,6 @@
 body {
   margin: 0;
   position: relative;
-  width: 100vw;
-  overflow-x: hidden;
   background: url("../assets/background.png") repeat;
   background-size: contain;
   font-family: $font-family-base;
