--- a/src/styles/sections/jumbotron.scss
+++ b/src/styles/sections/jumbotron.scss
@@ -1,6 +1,8 @@
 .jumbotron {
   flex-direction: row;
   align-items: flex-start;
+  width: 100vw;
+  overflow-x: hidden;
 
   img {
     height: 100%;
